# CMMS_django

./: db.sqlite3  manage.py  models_m.dot  pyproject.toml  requirements.txt
CopiamIndustrie/: asgi.py  settings.py  urls.py  wsgi.py
maintenance_app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
maintenance_app/migrations/: 0001_initial.py  0002_maintenanceschedule_notes.py  0003_person_maintenanceschedule_assigned_person.py  0004_equipment.py  0005_maintenanceschedule_technique.py  0006_maintenanceschedule_title.py  0007_maintenanceschedule_maintenance_type.py  0008_machine_m_model_machine_m_reference.py  0009_maintenanceschedule_duration_hours.py  0010_events.py  0011_task.py  0012_piecerechange.py  0013_equipmentcategory_equipment_cost_and_more.py  0014_equipment_used_by_correctivemaintenance_technician_and_more.py  0015_alter_piecerechange_prix.py  0016_correctivemaintenance_name_and_more.py  0017_remove_maintenancerequest_preventive_maintenance_and_more.py  0018_remove_maintenancerequest_equipment.py  0019_technician_guest.py  0020_remove_technician_guest.py  0021_remove_correctivemaintenance_end_time.py  0022_remove_preventivemaintenance_maintenance_duration_and_more.py  0023_preventivemaintenance_end_date.py  0024_correctivemaintenance_end_date.py  0025_alter_correctivemaintenance_end_date_and_more.py
maintenance_app/templates/maintenance_app/: add_equip.html  add_pm.html  add_task.html  add_technician.html  base.html  calendar_base.html  corrective_calendar.html  dashboard.html  edit_m.html  equipcat.html  index.html  kanban.html  login.html  (+8 more)
(+7 files in other folders)
